[tool.poetry]
name = "vscode-vim-remapper"
version = "0.1.0"
description = ""
authors = ["Max Gonzih <gonzih@gmail.com>"]
readme = "README.md"
packages = [{include = "vscode_vim_remapper"}]

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
